fix: bug fix on the overlay + replace `modelValue` by `visible`
BREAKING CHANGE:
`v-model` is now `v-model:visible` to control the visibility

--- a/packages/vue-ui/src/dialog/dialog.component.css
+++ b/packages/vue-ui/src/dialog/dialog.component.css
@@ -19,10 +19,19 @@
 }
 
 .bt-dialog {
+    pointer-events: none;
+
     :deep(.bt-overlay) {
+        pointer-events: none;
+
+        &:not([data-is-disabled]) {
+            pointer-events: all;
+        }
+
         & > .inner {
             min-width: var(--dialog-min-width);
             max-width: var(--dialog-max-width);
+            pointer-events: none;
 
             & .bt-dialog-inner {
                 display: flex;
@@ -35,6 +44,7 @@
                 border-width: var(--dialog-border-width);
                 border-style: var(--dialog-border-style);
                 border-color: var(--dialog-border-color);
+                pointer-events: all;
 
                 & > .header, & > .footer {
                     display: flex;
